deploy/samples/admission/apipastries-reshapr-entities.yaml
apiVersion: reshapr.io/v1alpha1
kind: Service
metadata:
  name: apipastries
  annotations:
    reshapr.io/instance: reshapr-control-plane-ctrl.reshapr-system
    reshapr.io/organization: pastries
spec:
  url: https://raw.githubusercontent.com/reshaprio/reshapr-controllers/refs/heads/main/deploy/samples/admission/apipastries-openapi.yaml
